# fl-xgb-lgbm-flowr-ciciot2023

./: .gitignore  README.md  requirements.txt
flwr_app/: client_app.py  config.py  pyproject.toml  server_app.py
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_data_analysis.ipynb  04_fl_setup.ipynb  05_baseline_comparison.ipynb  05_fl_training.ipynb  06_baseline_comparison.ipynb  06_fl_training.ipynb  07_evaluation.ipynb  08_hyperparameter_tuning.ipynb  09_statistical_analysis.ipynb
results/logs/: 01_eda_summary.json  01_label_distribution.csv  03_data_analysis.json  fl_history_lgb.json  fl_history_xgb.json
src/: __init__.py  config.py
